feat:add video history handler
